prevent footer ul scrollbar

--- a/busstops/static/css/_base.scss
+++ b/busstops/static/css/_base.scss
@@ -740,7 +740,7 @@ table {
 .service-map {
     display: none;
     // make room for ads:
-    margin-bottom: 50px;
+    margin-bottom: 26px;
     margin-top: 100px;
     box-shadow: #fff 0 -100px, #fff 0 100px;
 
@@ -1667,7 +1667,7 @@ footer {
         border-top: 1px solid $brand-color-darker;
         clear: both;
         margin: 0;
-        overflow-x: auto;
+        overflow: hidden;
         padding: 1em .625em;
         white-space: nowrap;
     }
